--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        },
+        },"files":["app/helpers.php"],
         "classmap": [
             "database/seeds",
             "database/factories"
